java-maven-sonar-argocd-helm-k8s/spring-boot-app-sessionAffinity/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
  labels:
    app: spring-boot-app
spec:
  replicas: 2  # Ensuring multiple pods
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
      - name: spring-boot-app
        image: channamma/happyapp:replaceImageTag
        ports:
        - containerPort: 8080
