java-maven-sonar-argocd-helm-k8s/spring-boot-app-sessionAffinity/Service-with-ingress-handlling-SA.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
spec:
  type: ClusterIP
  sessionAffinity: None  # Ingress will handle session affinity
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: spring-boot-app
